--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "parcel src/index.html",
     "build": "parcel build src/index.html",
     "start": "npm run build && live-server dist",
-    "heroku-postbuild": "parcel build src/index.html"
+    "heroku-postbuild": "npm install"
   },
   "keywords": [],
   "author": "",
