--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "music-master",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/index.js",
-  "homepage": "http://tskotniczny.github.io/smoked-food-calc", 
+  "main": "index.js",
+  "homepage": "https://tskotniczny.github.io/smoked-food-calc", 
   "scripts": {
     "dev": "parcel src/index.html",
     "build": "parcel build src/index.html",
     "start": "npm run build && live-server dist",
     "heroku-postbuild": "parcel build src/index.html",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
