Working deploy to gh-pages

--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": ".", 
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html",
+    "build": "parcel build src/index.html --public-url ./",
     "start": "npm run build && live-server dist",
     "heroku-postbuild": "parcel build src/index.html",
     "predeploy": "npm run build",
